crates/db/src/dialect/snapshots/switchyard_db__dialect__context_tests__d1_has_no_switcher.snap
---
source: crates/db/src/dialect/context_tests.rs
expression: "render(Engine::D1, \"main\", \"main\")"
---
switches_context: false
use_database("main"): <reconnect / unsupported>
use_schema("main"): <reconnect / unsupported>
