crates/db/src/dialect/snapshots/switchyard_db__dialect__context_tests__mysql_context_switch.snap
---
source: crates/db/src/dialect/context_tests.rs
expression: "render(Engine::MySql, \"shop\", \"odd`name\")"
---
switches_context: true
use_database("shop"): <reconnect / unsupported>
use_schema("odd`name"): USE `odd``name`
