crates/db/src/dialect/snapshots/switchyard_db__dialect__context_tests__oracle_context_switch.snap
---
source: crates/db/src/dialect/context_tests.rs
expression: "render(Engine::Oracle, \"ORCLPDB1\", \"HR\")"
---
switches_context: true
use_database("ORCLPDB1"): <reconnect / unsupported>
use_schema("HR"): ALTER SESSION SET CURRENT_SCHEMA = HR
