crates/db/src/dialect/snapshots/switchyard_db__dialect__context_tests__postgres_context_switch.snap
---
source: crates/db/src/dialect/context_tests.rs
expression: "render(Engine::Postgres, \"Sales DB\", \"Reporting\")"
---
switches_context: true
use_database("Sales DB"): <reconnect / unsupported>
use_schema("Reporting"): SET search_path TO "Reporting", public
