crates/db/src/dialect/snapshots/switchyard_db__dialect__context_tests__postgres_public.snap
---
source: crates/db/src/dialect/context_tests.rs
expression: "render(Engine::Postgres, \"shop\", \"public\")"
---
switches_context: true
use_database("shop"): <reconnect / unsupported>
use_schema("public"): SET search_path TO public
