crates/db/src/dialect/snapshots/switchyard_db__dialect__context_tests__sql_server_context_switch.snap
---
source: crates/db/src/dialect/context_tests.rs
expression: "render(Engine::SqlServer, \"odd]name\", \"sales\")"
---
switches_context: true
use_database("odd]name"): USE [odd]]name]
use_schema("sales"): <reconnect / unsupported>
